--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,6 @@
-.welcome-card img {
-  max-height: 35vh;
-  overflow: hidden;
+.Principa_Icon {
+  padding: 0;
+  display: block;
+  margin: auto;
 }
+
